<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/space_size_310"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal" >

    <FrameLayout
        android:id="@+id/toast_flow_warning_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toast_frame_red"
        tools:ignore="UselessParent" >

        <FrameLayout
            android:id="@+id/toast_flow_warning_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/toast_flow_warning_content_other"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/toast_flow_warning_app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/space_size_4"
                        android:ellipsize="end"
                        android:maxEms="5"
                        android:singleLine="true"
                        android:text="一二三四五六七"
                        android:textColor="@color/color_game_8"
                        android:textSize="@dimen/text_size_14"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:text="@string/use_flow_in_background"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/slow_your_game_speed"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:id="@+id/toast_flow_warning_content_gameself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/game_download_effect_net_speed"
                android:textColor="@android:color/white" />
        </FrameLayout>
    </FrameLayout>

</FrameLayout>